# F1_Telemetry_Manager

./: .env.example  .gitignore  ISSUE_TEMPLATES.md  LICENSE  README.md  conftest.py  docker-compose.yml  package-lock.json  pyproject.toml  pytest.ini
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml  webapp-ci.yml
backend/: .dockerignore  Dockerfile  main.py  mcp_tools.py  requirements.txt  test_query_router.py  test_voice_api.py  verify_dependencies.py
backend/core/: auth.py  config.py  driver_colors.py  paths.py  rate_limit.py  security.py  voice_config.py
backend/models/: chat_models.py  models.py  tool_schemas.py  voice_models.py
backend/services/: __init__.py  comparison_service.py  telemetry_service.py
backend/services/chatbot/: TEST_ROUTER.md  __init__.py  chat_engine.py  llm_service.py  lmstudio_service.py  mcp_bridge.py  stage_tracker.py
backend/services/simulation/: __init__.py  guard_rails.py  simulator.py
backend/services/telemetry/: fastf1_client.py  session_cache.py  telemetry_service.py
backend/services/voice/: audio_processor.py  stt_service.py  tts_service.py
backend/temp/audio/: .gitkeep
backend/utils/: generate_secret.py  laps_cache.py  race_state_builder.py  serialization.py
data/: get_session_info.py
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  CHAT_IMPLEMENTATION_PLAN.md  IMPORTS_GUIDE.md  MULTIMODAL_IMPLEMENTATION.md  QUERY_ROUTER_GUIDE.md  QUERY_ROUTING_IMPLEMENTATION.md  ROADMAP.md  VOICE_CHAT_IMPLEMENTATION_PLAN.md  imports-guide.md  multimodal-implementation.md  query-router.md  telemetry-architecture.md  telemetry-subproject-history.md
docs/archived/: CIRCUIT_ANALYSIS_IMPLEMENTATION_PLAN.md  CIRCUIT_COMPARISON_IMPLEMENTATION_PLAN.md  VOICE_CHAT_IMPLEMENTATION_PLAN.md  VOICE_ORB_VISUALIZATION_PLAN.md
docs/audits/: AUDIT_P1_BACKEND.md
docs/instructions/: INSTALL_INSTRUCTIONS.md  VOICE_FRONTEND_SETUP.md  VOICE_SETUP.md
docs/migration/: MIGRATION_PLAN.md  SPRINTS_AND_ISSUES.md  create_github_issues.sh
docs/migration/design-specs/: app-chrome-round2.md  chart-animation-selection-bugs.md  chat-voice.md  comparison.md  dashboard-round2.md  model-lab.md  race-analysis.md  strategy.md
frontend/: .dockerignore  Dockerfile  __init__.py  config.py  requirements.txt
frontend/app/: __init__.py  main.py  setup_path.py  styles.py  track_data.py
frontend/components/auth/: auth_form.py
frontend/components/chatbot/: __init__.py  chart_builders.py  chat_history.py  chat_input.py  chat_message.py  chat_sidebar.py  tool_result_renderer.py
frontend/components/common/: __init__.py  ask_about_button.py  chart_styles.py  data_selectors.py  driver_colors.py  link_button.py  loading.py
frontend/components/comparison/: __init__.py  brake_comparison_graph.py  circuit_comparison.py  delta_time_graph.py  speed_comparison_graph.py  synchronized_comparison_animation.py  throttle_comparison_graph.py
frontend/components/dashboard/: __init__.py  css_styles.py  data_selectors.py  lap_graph.py
frontend/components/layout/: navbar.py  titles.py
frontend/components/race_analysis/: gap_charts.py  radio_panel.py  tire_charts.py
frontend/components/strategy/: agent_tabs.py  scenario_chart.py  strategy_card.py
frontend/components/streamlit_audio_viz/: README.md  __init__.py
frontend/components/telemetry/: __init__.py  brake_graph.py  circuit_analysis.py  circuit_domination.py  delta_graph.py  drs_graph.py  gear_graph.py  rpm_graph.py  speed_graph.py  throttle_graph.py
frontend/components/voice/: __init__.py  voice_chat.py  voice_input.py
frontend/pages/: chat.py  comparison.py  dashboard.py  model_lab.py  race_analysis.py  strategy.py
frontend/services/: auth_service.py  chat_service.py  strategy_service.py  telemetry_service.py  voice_api.py
frontend/utils/: audio_utils.py  chat_navigation.py  chat_state.py  data_loaders.py  race_processing.py  race_viz.py  report_storage.py  time_formatters.py
tests/: conftest.py  fake_openai.py  sse_utils.py  test_chat_contracts.py  test_chat_engine.py  test_chat_sse.py  test_fake_openai.py  test_llm_timeout.py  test_mcp_bridge.py  test_paths.py  test_provider_preflight.py  test_security_auth.py  test_security_bind_mcp.py  test_security_cost_cap.py  test_security_hardening.py  test_security_tool_allowlist.py  test_strategy_audit_fixes.py  test_voice_rate.py
tests/fixtures/sse/: README.md  chat_plain.sse  (+2 more)
webapp/: .oxlintrc.json  .prettierignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
webapp/scripts/: shot.mjs
webapp/src/: App.test.tsx  App.tsx  index.css  main.tsx  vite-env.d.ts
(+269 files in other folders)
